Avoid auto quitting on auto save

We now have a way to specify when an export action is explicitly done by
the user.

BUG: 469646

How to test: enable quit on manual save and check save file to default folder


(cherry picked from commit ed6c94f5178e58d57f62e1b32928562d76db6680)